# pyswmm-solver

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: build-test.yml
src/outfile/: CMakeLists.txt  swmm_output.c
src/outfile/include/: swmm_output.h
src/shared/: CMakeLists.txt
src/solver/: CMakeLists.txt  funcs.h  globals.h  objects.h  output.c  swmm5.c  toolkit.c
src/solver/bindings/: swmm5.def
src/solver/include/: swmm5.h  toolkit.h  toolkit_error.h
tests/: CMakeLists.txt
tests/outfile/: test_bounds.cpp  test_output.cpp
tests/solver/: CMakeLists.txt  test_lid.cpp  test_live_report.cpp  test_live_results.cpp  test_predicates.hpp  test_solver.cpp  test_solver.hpp  test_toolkit.cpp
tests/solver/data/hotstart/: INFILE_Simulation1.hsf  INFILE_Simulation2.hsf
